@@ -8,10 +8,10 @@ Bonobo/bonobo11	Gene/Bonobo/panPan2_genes.gff3.gz	null	null	null	Ont/Bonobo/bono
 Bonobo/bonobo2	Gene/Bonobo/panPan3_genes.gff3.gz	null	null	null	Ont/Bonobo/bonobo2/*.gff3*	data_bonobo2	Bonobo	Mhudiblu_PPA_v0
 Dog/dog31	Gene/Dog/canFam3_genes.gff3.gz	null	null	null	Ont/Dog/dog31/*.gff3*	data_dog3_1	Dog	dog3.1
 Squirrel/squirrel20	Gene/Squirrel/speTri2_genes.gff3.gz	null	null	null	Ont/Squirrel/squirrel20/*.gff3*	data_squirrel2_0	Squirrel	SpeTri2.0
-Rat/rn7_2	Gene/Rat/mRatBN7_genes.gff3.gz	Qtl/Rat/rat72/Rat_RGDQTLS.gff3*	Marker/Rat/rn7_markers.gff3*	Strain/Rat/*rn7*strains.gff3*	Ont/Rat/rat72/*.gff3*	data_rn7_2	Rat	mRatBN7.2
-Rat/rn6	Gene/Rat/rn6_genes.gff3.gz	Qtl/Rat/rat60/Rat_RGDQTLS.gff3*	Marker/Rat/rn6_markers.gff3*	Strain/Rat/*rn6*strains.gff3*	Ont/Rat/rat60/*.gff3*	data_rgd6	Rat	rn6
-Rat/rn5	Gene/Rat/rn5_genes.gff3.gz	Qtl/Rat/rat50/Rat_RGDQTLS.gff3*	Marker/Rat/rn5_markers.gff3*	Strain/Rat/*rn5*strains.gff3*	Ont/Rat/rat50/*.gff3*	data_rgd5	Rat	rn5
-Rat/rn3_4	Gene/Rat/rn4_genes.gff3.gz	Qtl/Rat/rat34/Rat_RGDQTLS.gff3*	Marker/Rat/rn3.4_markers.gff3*	Strain/Rat/*rn3.4*strains.gff3*	Ont/Rat/rat34/*.gff3*	data_rgd3_4	Rat	rn3.4
+Rat/rn7_2	Gene/Rat/mRatBN7_genes.gff3.gz	Qtl/Rat/rat72/Rat_RGDQTLS.gff3*	Marker/Rat/rn7_markers.gff3*	Strain/Rat/rn7*strains.gff3*	Ont/Rat/rat72/*.gff3*	data_rn7_2	Rat	mRatBN7.2
+Rat/rn6	Gene/Rat/rn6_genes.gff3.gz	Qtl/Rat/rat60/Rat_RGDQTLS.gff3*	Marker/Rat/rn6_markers.gff3*	Strain/Rat/rn6*strains.gff3*	Ont/Rat/rat60/*.gff3*	data_rgd6	Rat	rn6
+Rat/rn5	Gene/Rat/rn5_genes.gff3.gz	Qtl/Rat/rat50/Rat_RGDQTLS.gff3*	Marker/Rat/rn5_markers.gff3*	Strain/Rat/rn5*strains.gff3*	Ont/Rat/rat50/*.gff3*	data_rgd5	Rat	rn5
+Rat/rn3_4	Gene/Rat/rn4_genes.gff3.gz	Qtl/Rat/rat34/Rat_RGDQTLS.gff3*	Marker/Rat/rn3.4_markers.gff3*	Strain/Rat/rn3.4*strains.gff3*	Ont/Rat/rat34/*.gff3*	data_rgd3_4	Rat	rn3.4
 Mouse/mm39	Gene/Mouse/mm39_genes.gff3.gz	Qtl/Mouse/mouse39/Mouse_RGDQTLS.gff3*	null	null	Ont/Mouse/mouse39/*.gff3*	data_mm39	Mouse	mm39
 Mouse/mm38	Gene/Mouse/mm10_genes.gff3.gz	Qtl/Mouse/mouse38/Mouse_RGDQTLS.gff3*	Marker/Mouse/mm10_markers.gff3*	null	Ont/Mouse/mouse38/*.gff3*	data_mm38	Mouse	mm38
 Mouse/mm37	Gene/Mouse/mm9_genes.gff3.gz	Qtl/Mouse/mouse37/Mouse_RGDQTLS.gff3*	Marker/Mouse/mm9_markers.gff3*	null	Ont/Mouse/mouse37/*.gff3*	data_mm37	Mouse	mm37
